[FIX]: prevent cls when scrollbar appears

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,6 +9,7 @@
   color: #eee;
 
   line-height: 2;
+  scrollbar-gutter: stable;
 }
 
 * {
